[project]
name = "textual-rpn15c"
version = "0.1.0"
description = "An RPN calculator with an HP 15c look for your terminal"
readme = "README.md"
authors = [
    { name = "Frisco Rose", email = "friscorose@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.86.3",
]

[project.scripts]
rpn-15c = "textual_rpn15c:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
